fixinf text desc overflow issue at 320px

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ nav {
     grid-template-columns: repeat(auto-fill, minmax(0, 23.5rem));
     justify-content: center;
     width: 80vw;
+    margin: 0;
+    padding: 0;
     max-width: 1500px;
     gap: 2rem;
 }
@@ -52,6 +54,7 @@ nav {
     width: 100%;
     height: 33.75rem;
     padding: 0;
+    margin: 0;
     border: none;
     border-radius: 3%;
     position: relative;
@@ -137,6 +140,7 @@ ul li{
     max-height: 6rem;
     margin-left: 1.25rem;
     margin-right: 1.25rem;
+    margin-bottom: 3.25rem;
 }
 
 /* See Code button */
